// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src >> themes >> Text Body Text render Render body test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIDisplay-Regular",
        "fontSize": 35,
      },
    ]
  }
>
  Body variant
</Text>
`;

exports[`src >> themes >> Text BodySmall Text render Render BodySmall test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIDisplay-Regular",
        "fontSize": 31,
      },
    ]
  }
>
  Caption variant
</Text>
`;

exports[`src >> themes >> Text BodyXSmall Text render Render BodyXSmall test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIDisplay-Regular",
        "fontSize": 27,
      },
    ]
  }
>
  Caption variant
</Text>
`;

exports[`src >> themes >> Text Intro Text render Render intro test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Semibold",
        "fontSize": 31,
      },
    ]
  }
>
  Body variant
</Text>
`;

exports[`src >> themes >> Text h1 Text render Render h1 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Bold",
        "fontSize": 102,
      },
    ]
  }
>
  H1 variant
</Text>
`;

exports[`src >> themes >> Text h2 Text render Render h2 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Bold",
        "fontSize": 63,
      },
    ]
  }
>
  H2 variant
</Text>
`;

exports[`src >> themes >> Text h3 Text render Render h3 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Bold",
        "fontSize": 47,
      },
    ]
  }
>
  H3 variant
</Text>
`;

exports[`src >> themes >> Text h4 Text render Render h4 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontFamily": "SFUIText-Regular",
        "fontSize": 39,
      },
    ]
  }
>
  H3 variant
</Text>
`;
